# object-classifier

./: .gitignore  .gitmodules  LICENSE  README.md  main.py  pyproject.toml
scripts/: roi_marker.py  serve_rk3588.py
src/object_classifier/: __init__.py  audit.py  calibration.py  cli.py  config.py  decision.py  export.py  features.py  index.py  pipeline.py  quality.py  repository.py  rerank.py  review.py  roi.py  runtime.py  schemas.py  web.py
tests/: test_backend_contract.py  test_calibration.py  test_cli.py  test_decision.py  test_export.py  test_export_scripts.py  test_feature_roi_transform.py  test_index.py  test_pipeline_smoke.py  test_repeat_registration.py  test_repository.py  test_review.py  test_roi.py  test_runtime_consistency.py  test_web.py
tools/: export_onnx.py  export_rknn.py  inspect_model_shapes.py
